--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -36,6 +36,10 @@
 	<!--dependencies / -->
 	<dependencies>
 		<dependency>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-annotations</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<scope>test</scope>
