--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,16 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>3.0.0-M3</version>
+					<configuration>
+						<rules>
+							<requireJavaVersion>
+								<version>[1.8,9),[11,)</version>
+							</requireJavaVersion>
+							<requireMavenVersion>
+								<version>3.6.3</version>
+							</requireMavenVersion>
+						</rules>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -412,20 +422,10 @@
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>enforce-maven</id>
+						<id>enforce</id>
 						<goals>
 							<goal>enforce</goal>
 						</goals>
-						<configuration>
-							<rules>
-								<requireJavaVersion>
-									<version>[1.8,9),[11,)</version>
-								</requireJavaVersion>
-								<requireMavenVersion>
-									<version>3.6.3</version>
-								</requireMavenVersion>
-							</rules>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
