--- a/pom.xml
+++ b/pom.xml
@@ -448,6 +448,8 @@
 		<profile>
 			<id>cicd</id>
 			<properties>
+				<downloadJavadocs>false</downloadJavadocs>
+				<downloadSources>false</downloadSources>
 				<sort.skip>true</sort.skip>
 			</properties>
 		</profile>
