--- a/pom.xml
+++ b/pom.xml
@@ -654,6 +654,8 @@
 				</plugins>
 			</build>
 			<properties>
+				<downloadJavadocs>false</downloadJavadocs>
+				<downloadSources>false</downloadSources>
 				<sort.skip>true</sort.skip>
 			</properties>
 		</profile>
