--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 					<!--					</configuration>-->
 					<executions>
 						<execution>
-							<id>java11</id>
+							<id>java11-main</id>
 							<phase>compile</phase>
 							<goals>
 								<goal>compile</goal>
