--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,26 +87,6 @@ commands:
   std_mvnw_jdk8:
     description: "Standard JDK8 mvnw steps"
     steps:
-      - restore_cache:
-          keys:
-            - m2-dependencies-{{ checksum "pom.xml" }}
-            - m2-dependencies-
-      - run:
-          name: "Tidy Local Maven Repo of lastUpdated"
-          command: find ~/.m2/repository/ -name "*.lastUpdated" | xargs -ixxx rm -rf xxx
-          when: always
-      - run:
-          name: "Tidy Local Maven Repo of _remote.repositories"
-          command: find ~/.m2/repository/ -name "_remote.repositories" | xargs -ixxx rm -rf xxx
-          when: always
-      - run:
-          name: "Tidy Local Maven Repo of resolver-status.properties"
-          command: find ~/.m2/repository/ -name "resolver-status.properties" | xargs -ixxx rm -rf xxx
-          when: always
-      - run:
-          name: "Tidy Local Maven Repo of maven-metadata-*.xml"
-          command: find ~/.m2/repository/ -name "maven-metadata-*.xml" | xargs -ixxx rm -rf xxx
-          when: always
       - run:
           name: "Maven Jdk8 Clean Install"
           command: ./mvnw -Pcicd clean verify -DskipTests
@@ -117,56 +97,16 @@ commands:
       - run:
           name: "Maven Jdk8 Build Jdk11 Tests"
           command: export JAVA_HOME=/usr/local/openjdk-11 && export PATH=${JAVA_HOME}/bin:{$PATH} && ./mvnw -Pcicd verify
-      - run:
-          name: "Tidy Local Maven Repo of project before save cache"
-          command: rm -rf ~/.m2/repository/com/github/nhojpatrick
-          when: always
-      - save_cache:
-          key: m2-dependencies-{{ checksum "pom.xml" }}
-          paths:
-            - ~/.m2/repository
-            - ~/.m2/wrapper
-          when: always
 
   std_mvnw_jdk11:
     description: "Standard JDK11 mvnw steps"
     steps:
-      - restore_cache:
-          keys:
-            - m2-dependencies-{{ checksum "pom.xml" }}
-            - m2-dependencies-
-      - run:
-          name: "Tidy Local Maven Repo of lastUpdated"
-          command: find ~/.m2/repository/ -name "*.lastUpdated" | xargs -ixxx rm -rf xxx
-          when: always
-      - run:
-          name: "Tidy Local Maven Repo of _remote.repositories"
-          command: find ~/.m2/repository/ -name "_remote.repositories" | xargs -ixxx rm -rf xxx
-          when: always
-      - run:
-          name: "Tidy Local Maven Repo of resolver-status.properties"
-          command: find ~/.m2/repository/ -name "resolver-status.properties" | xargs -ixxx rm -rf xxx
-          when: always
-      - run:
-          name: "Tidy Local Maven Repo of maven-metadata-*.xml"
-          command: find ~/.m2/repository/ -name "maven-metadata-*.xml" | xargs -ixxx rm -rf xxx
-          when: always
       - run:
           name: "Maven Jdk11 Clean Install SkipTests"
           command: ./mvnw -Pcicd clean verify -DskipTests
       - run:
           name: "Maven Jdk11 Tests"
           command: ./mvnw -Pcicd verify
-      - run:
-          name: "Tidy Local Maven Repo of project before save cache"
-          command: rm -rf ~/.m2/repository/com/github/nhojpatrick
-          when: always
-      - save_cache:
-          key: m2-dependencies-{{ checksum "pom.xml" }}
-          paths:
-            - ~/.m2/repository
-            - ~/.m2/wrapper
-          when: always
 
   qa_step:
     parameters:
@@ -174,11 +114,21 @@ commands:
         type: string
     description: "Standard QA Step << parameters.stepName >>"
     steps:
+      - run: ./mvnw -Pcicd,qa_<< parameters.stepName >> -DskipTests verify
+
+  cache_restore:
+    parameters:
+      cacheAlphaName:
+        type: string
+      cacheBravoName:
+        type: string
+    description: "Save Cache Step << parameters.cacheAlphaName >> << parameters.cacheBravoName >>"
+    steps:
       - restore_cache:
           keys:
-            - m2-dependencies-{{ checksum "pom.xml" }}-<< parameters.stepName >>
+            - m2-dependencies-{{ checksum "pom.xml" }}-<< parameters.cacheAlphaName >>
+            - m2-dependencies-{{ checksum "pom.xml" }}-<< parameters.cacheBravoName >>
             - m2-dependencies-{{ checksum "pom.xml" }}
-            - m2-dependencies--
             - m2-dependencies-
       - run:
           name: "Tidy Local Maven Repo of lastUpdated"
@@ -196,13 +146,19 @@ commands:
           name: "Tidy Local Maven Repo of maven-metadata-*.xml"
           command: find ~/.m2/repository/ -name "maven-metadata-*.xml" | xargs -ixxx rm -rf xxx
           when: always
-      - run: ./mvnw -Pcicd,qa_<< parameters.stepName >> -DskipTests verify
+
+  cache_save:
+    parameters:
+      cacheSaveName:
+        type: string
+    description: "Save Cache Step << parameters.cacheSaveName >>"
+    steps:
       - run:
           name: "Tidy Local Maven Repo of project before save cache"
           command: rm -rf ~/.m2/repository/com/github/nhojpatrick
           when: always
       - save_cache:
-          key: m2-dependencies-{{ checksum "pom.xml" }}-<< parameters.stepName >>
+          key: m2-dependencies-{{ checksum "pom.xml" }}-<< parameters.cacheSaveName >>
           paths:
             - ~/.m2/repository
             - ~/.m2/wrapper
@@ -229,7 +185,12 @@ jobs:
       - install_openjdk_11
       - setup_std_toolchain
       - checkout
+      - cache_restore:
+          cacheAlphaName: jdk8
+          cacheBravoName: jdk8
       - std_mvnw_jdk8
+      - cache_save:
+          cacheSaveName: jdk8
 
   jdk11:
     docker:
@@ -238,7 +199,12 @@ jobs:
     steps:
       - setup_openjdk_11_toolchain
       - checkout
+      - cache_restore:
+          cacheAlphaName: jdk11
+          cacheBravoName: jdk11
       - std_mvnw_jdk11
+      - cache_save:
+          cacheSaveName: jdk11
 
   qa_matrix:
     parameters:
@@ -251,8 +217,13 @@ jobs:
       - install_openjdk_11
       - setup_std_toolchain
       - checkout
+      - cache_restore:
+          cacheAlphaName: << parameters.qa_step_profile >>
+          cacheBravoName: jdk8
       - qa_step:
           stepName: << parameters.qa_step_profile >>
+      - cache_save:
+          cacheSaveName: << parameters.qa_step_profile >>
 
 workflows:
   version: 2
