--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,6 +225,33 @@ jobs:
       - cache_save:
           cacheSaveName: << parameters.qa_step_profile >>
 
+  qa_owasp_dependency_check:
+    docker:
+      - image: circleci/openjdk:8-jdk-stretch
+    resource_class: medium
+    steps:
+      - install_openjdk_11
+      - setup_std_toolchain
+      - checkout
+      - cache_restore:
+          cacheAlphaName: owasp-dependency-check
+          cacheBravoName: jdk8
+      - run: date +%F > date
+      - restore_cache:
+          keys:
+            - m2-owasp-dependency-check-{{ checksum "date" }}
+            - m2-owasp-dependency-check-
+      - run:
+          command: ./mvnw -Pcicd,qa_owasp-dependency-check -DskipTests verify -DdataDirectory=~/.m2/owasp-dependency-check-data
+          no_output_timeout: 30m
+      - cache_save:
+          cacheSaveName: owasp-dependency-check
+      - save_cache:
+          key: m2-owasp-dependency-check-{{ checksum "date" }}
+          paths:
+            - ~/.m2/owasp-dependency-check-data
+          when: always
+
 workflows:
   version: 2
   build_all:
@@ -255,6 +282,11 @@ workflows:
                 "spotbugs"
               ]
 
+      - qa_owasp_dependency_check:
+          requires:
+            - passed_builds
+
       - passed_qa:
           requires:
             - qa_matrix
+            - qa_owasp_dependency_check
