--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 				<plugin>
 					<groupId>com.github.spotbugs</groupId>
 					<artifactId>spotbugs-maven-plugin</artifactId>
-					<version>4.0.4</version>
+					<version>${plugins.com.github.spotbugs.spotbugs-maven-plugin}</version>
 					<configuration>
 						<plugins>
 							<plugin>
@@ -77,8 +77,8 @@
 								<version>1.10.1</version>
 							</plugin>
 							<plugin>
-								<groupId>com.mebigfatguy.fb-contrib</groupId>
-								<artifactId>fb-contrib</artifactId>
+								<groupId>com.mebigfatguy.sb-contrib</groupId>
+								<artifactId>sb-contrib</artifactId>
 								<version>7.4.7</version>
 							</plugin>
 							<plugin>
@@ -965,10 +965,11 @@
 		<project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
 		<!-- plugin versions -->
+		<plugins.com.github.spotbugs.spotbugs-maven-plugin>4.0.4</plugins.com.github.spotbugs.spotbugs-maven-plugin>
 		<plugins.github.ekryd.sortpom-maven-plugin>2.11.0</plugins.github.ekryd.sortpom-maven-plugin>
 		<plugins.takari.maven>0.7.7</plugins.takari.maven>
 		<!-- dependency versions -->
-		<version.com.github.spotbugs>[4.0.2,4.0.99)</version.com.github.spotbugs>
+		<version.com.github.spotbugs>4.0.4</version.com.github.spotbugs>
 		<version.com.puppycrawl.tools.checkstyle>8.33</version.com.puppycrawl.tools.checkstyle>
 		<version.org.apache.commons.lang3>[3.10,3.99)</version.org.apache.commons.lang3>
 		<version.org.apache.logging.log4j>[2.13.0,2.99.99)</version.org.apache.logging.log4j>
